# BasicChessEndgamesRelmGtk3

./: .gitignore  Cargo.toml  README.md  i18n.toml
i18n/en/: basic-chess-endgames-relm.ftl
i18n/es/: basic-chess-endgames-relm.ftl
i18n/fr/: basic-chess-endgames-relm.ftl
locales/po/es/: basic_chess_endgames_relm.po
locales/po/fr/: basic_chess_endgames_relm.po
src/: main.rs  translations.rs
src/widgets/: mainwindow.rs  mod.rs
src/widgets/chessboard/: mod.rs  mouse_handler.rs  painter.rs  pieces_images.rs  utils.rs
src/widgets/history/: mod.rs  style.css  utils.rs
