[package]
name = "basic-chess-endgames-relm"
version = "0.1.0"
edition = "2021"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
gtk = "0.15.5"
pleco = "0.5.0"
relm = "0.23.0"
relm-derive = "0.23.0"
